prevented posters overlapping booking form

--- a/src/main/webapp/app/feature/home/home.css
+++ b/src/main/webapp/app/feature/home/home.css
@@ -6,3 +6,6 @@ img.img-responsive{
 img.img-responsive:hover {
 	transform:scale(1.2,1.2);	
 }
+form{
+	padding: 35px
+}
